// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WhoAreWeExplore renders correctly with 3 items 1`] = `
<body>
  <div>
    <div
      class="sc-bdvwhi lnsNzx"
    >
      <span
        class="sc-bdvwhi ejFVPF"
        style="pointer-events: none;"
      >
        <img
          alt=""
          class="sc-jRQBiJ eMsccW"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1763546694/ui-graphics/confetti-background_xbvfrc.svg"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </span>
      <div
        class="sc-bdvwhi iatEdD"
      >
        <div
          class="sc-bdvwhi sc-gsDMPd smuqg iEQOJT"
        >
          <h2
            class="sc-bkkgYE inLCwb"
            id="react-use-id-test-result"
          >
            TEST_TITLE
          </h2>
          <nav
            aria-labelledby="react-use-id-test-result"
          >
            <ul
              class="sc-78cd633-1 jYVZrZ"
            >
              <li
                class="sc-bdvwhi sc-bXTeWK kgCXAV eKzdht"
              >
                <a
                  href="#item_one"
                  style="outline: none;"
                  target="_self"
                >
                  <div
                    class="sc-bdvwhi sc-gsDMPd sc-78cd633-0 hcfMxe ezaUKt jKbdzx"
                    data-testid="who-we-are-explore-item"
                  >
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi gaaoSG"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1704901279/icons/canbi3fuz5fanzom2hvi.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd eKftaO kkGnDS"
                    >
                      ITEM_ONE
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi cqHYAi"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707149070/icons/fv0z57zerrioft52dd9n.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                  </div>
                </a>
              </li>
              <li
                class="sc-bdvwhi sc-bXTeWK kgCXAV eKzdht"
              >
                <a
                  href="#item_two"
                  style="outline: none;"
                  target="_self"
                >
                  <div
                    class="sc-bdvwhi sc-gsDMPd sc-78cd633-0 hcfMxe ezaUKt jKbdzx"
                    data-testid="who-we-are-explore-item"
                  >
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi gaaoSG"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1704901279/icons/canbi3fuz5fanzom2hvi.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd eKftaO kkGnDS"
                    >
                      ITEM_TWO
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi cqHYAi"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707149070/icons/fv0z57zerrioft52dd9n.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                  </div>
                </a>
              </li>
              <li
                class="sc-bdvwhi sc-bXTeWK kgCXAV eKzdht"
              >
                <a
                  href="#item_three"
                  style="outline: none;"
                  target="_self"
                >
                  <div
                    class="sc-bdvwhi sc-gsDMPd sc-78cd633-0 hcfMxe ezaUKt jKbdzx"
                    data-testid="who-we-are-explore-item"
                  >
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi gaaoSG"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1704901279/icons/canbi3fuz5fanzom2hvi.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd eKftaO kkGnDS"
                    >
                      ITEM_THREE
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi cqHYAi"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707149070/icons/fv0z57zerrioft52dd9n.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                  </div>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`WhoAreWeExplore renders correctly with 4 items 1`] = `
<body>
  <div>
    <div
      class="sc-bdvwhi lnsNzx"
    >
      <span
        class="sc-bdvwhi ejFVPF"
        style="pointer-events: none;"
      >
        <img
          alt=""
          class="sc-jRQBiJ eMsccW"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1763546694/ui-graphics/confetti-background_xbvfrc.svg"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </span>
      <div
        class="sc-bdvwhi iatEdD"
      >
        <div
          class="sc-bdvwhi sc-gsDMPd smuqg iEQOJT"
        >
          <h2
            class="sc-bkkgYE inLCwb"
            id="react-use-id-test-result"
          >
            TEST_TITLE
          </h2>
          <nav
            aria-labelledby="react-use-id-test-result"
          >
            <ul
              class="sc-78cd633-1 dIWmmg"
            >
              <li
                class="sc-bdvwhi sc-bXTeWK kgCXAV eKzdht"
              >
                <a
                  href="#item_one"
                  style="outline: none;"
                  target="_self"
                >
                  <div
                    class="sc-bdvwhi sc-gsDMPd sc-78cd633-0 hcfMxe ezaUKt jKbdzx"
                    data-testid="who-we-are-explore-item"
                  >
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi gaaoSG"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1704901279/icons/canbi3fuz5fanzom2hvi.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd eKftaO kkGnDS"
                    >
                      ITEM_ONE
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi cqHYAi"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707149070/icons/fv0z57zerrioft52dd9n.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                  </div>
                </a>
              </li>
              <li
                class="sc-bdvwhi sc-bXTeWK kgCXAV eKzdht"
              >
                <a
                  href="#item_two"
                  style="outline: none;"
                  target="_self"
                >
                  <div
                    class="sc-bdvwhi sc-gsDMPd sc-78cd633-0 hcfMxe ezaUKt jKbdzx"
                    data-testid="who-we-are-explore-item"
                  >
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi gaaoSG"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1704901279/icons/canbi3fuz5fanzom2hvi.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd eKftaO kkGnDS"
                    >
                      ITEM_TWO
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi cqHYAi"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707149070/icons/fv0z57zerrioft52dd9n.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                  </div>
                </a>
              </li>
              <li
                class="sc-bdvwhi sc-bXTeWK kgCXAV eKzdht"
              >
                <a
                  href="#item_three"
                  style="outline: none;"
                  target="_self"
                >
                  <div
                    class="sc-bdvwhi sc-gsDMPd sc-78cd633-0 hcfMxe ezaUKt jKbdzx"
                    data-testid="who-we-are-explore-item"
                  >
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi gaaoSG"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1704901279/icons/canbi3fuz5fanzom2hvi.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd eKftaO kkGnDS"
                    >
                      ITEM_THREE
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi cqHYAi"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707149070/icons/fv0z57zerrioft52dd9n.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                  </div>
                </a>
              </li>
              <li
                class="sc-bdvwhi sc-bXTeWK kgCXAV eKzdht"
              >
                <a
                  href="#item_four"
                  style="outline: none;"
                  target="_self"
                >
                  <div
                    class="sc-bdvwhi sc-gsDMPd sc-78cd633-0 hcfMxe ezaUKt jKbdzx"
                    data-testid="who-we-are-explore-item"
                  >
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi gaaoSG"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1704901279/icons/canbi3fuz5fanzom2hvi.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd eKftaO kkGnDS"
                    >
                      ITEM_FOUR
                    </div>
                    <div
                      class="sc-bdvwhi sc-gsDMPd hPWTKU Bakex"
                    >
                      <span
                        class="sc-bdvwhi cqHYAi"
                      >
                        <img
                          alt=""
                          class="sc-jRQBiJ eMsccW"
                          data-nimg="fill"
                          decoding="async"
                          loading="lazy"
                          src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707149070/icons/fv0z57zerrioft52dd9n.svg"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </span>
                    </div>
                  </div>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</body>
`;
